--- a/vue-serina/src/assets/main.css
+++ b/vue-serina/src/assets/main.css
@@ -1,35 +1,72 @@
+/* ##2f2f3f */
 @import './base.css';
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+p{
+  margin: 0;
+  /* width: 100%; height: 100%; */
+}
+#keyword{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2rem; height: 2rem;
+  transition: 0.25s all;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+/* #keyword:hover{
+  color: greenyellow;
+  transform: scale(1.2);
+} */
+
+.card{
+  width: 15rem; height: 20rem;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 0.1rem solid white;
+  /* border-radius: 0.5rem; */
+  display: flex;
+  align-items: end;
+
+  background-size: 100%;
+  transition: background-size 0.25s ease;
+}
+.card:hover{
+  background-size: 110%;
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+.desc{
+  padding: 0.15rem;
+  width: 100%; height: auto;
+  background-color: rgba(0, 0, 0, 0.7);
+  box-sizing: border-box;
 }
+.QB_title{
+  font-size: 1.25rem;
+}
+.QB_desc{
+  font-size: 0.75rem;
+  display: none;
+}
+/* .card:hover > .desc{
+  height: auto;
+} */
+.sorted_row{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 5rem;
+  width: 100%;
+  margin-top: 1rem;
+  margin-bottom: 4rem;
+  /* 차후범용적 사용가능하게 정렬이외엔 따로 만들기 */
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+}
+.card:hover .QB_desc{
+  display: flex;
+  opacity: 0.75;
 }
